--- a/package.json
+++ b/package.json
@@ -12,9 +12,19 @@
   },
   "license": "UNLICENSED",
   "author": "jose-pleonasm",
-  "type": "commonjs",
-  "main": "index.js",
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "type": "module",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
+  },
+  "dependencies": {
+    "uuid": "^11.0.5"
   }
 }
