--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "type": "module",
   "main": "src/main.js",
   "scripts": {
-    "start": "node ./src/cli/index.js",
+    "start": "node ./src/cli/csvToHstom.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
