--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "halir",
+  "name": "@halir/framework",
   "version": "0.1.0",
   "description": "",
   "homepage": "https://github.com/jose-pleonasm/Halir#readme",
