--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jose-pleonasm/Halir.git"
+    "url": "git+https://github.com/jose-pleonasm/Halir.git"
   },
   "license": "UNLICENSED",
   "author": "jose-pleonasm",
