Add overview generator

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csvToHstonFile": "node ./src/cli/csvToHstonFile.js",
     "hstonToCsvFile": "node ./src/cli/hstonToCsvFile.js",
     "transformCsvFile": "node ./src/cli/transformCsvFile.js",
+    "makeOverviewFromTransactionsCsvFile": "node ./src/cli/makeOverviewFromTransactionsCsvFile.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
