--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ jspm_packages/
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+commands.sh
+examples.txt
+examples.js
