Add current price based on ticker

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "transformCsvFile": "node ./src/cli/transformCsvFile.js",
     "makeOverviewFromTransactionsCsvFile": "node ./src/cli/makeOverviewFromTransactionsCsvFile.js",
     "makeOverviewFromTransactionsOdsFile": "node ./src/cli/makeOverviewFromTransactionsOdsFile.js",
+    "makeOverviewFromTransactionsEnhancedCsvFile": "node ./src/cli/makeOverviewFromTransactionsEnhancedCsvFile.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
