--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "makeOverviewFromTransactionsCsvFile": "node ./src/cli/makeOverviewFromTransactionsCsvFile.js",
     "makeOverviewFromTransactionsOdsFile": "node ./src/cli/makeOverviewFromTransactionsOdsFile.js",
     "makeOverviewFromTransactionsEnhancedCsvFile": "node ./src/cli/makeOverviewFromTransactionsEnhancedCsvFile.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:browser": "vitest"
   },
   "devDependencies": {
-    "prettier": "^3.4.2"
+    "@vitest/browser": "^3.0.5",
+    "playwright": "^1.50.1",
+    "prettier": "^3.4.2",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "uuid": "^11.0.5"
